# openfst

./: .bazelrc  .cmake-format.yaml  MODULE.bazel  README.md
openfst/benchmark/: BUILD.bazel  CMakeLists.txt
openfst/compat/: BUILD.bazel  CMakeLists.txt  compat.cc  compat.h  compat_memory.h  compat_memory_test.cc  file_path.cc  file_path.h  file_path_test.cc  flags.cc  flags.h  init.cc  init.h  init_test.cc  lock.h  log.h  status_macros.h  status_macros_test.cc  unaligned.h  unaligned_test.cc
openfst/extensions/categorial/: BUILD.bazel  CMakeLists.txt
openfst/extensions/compact/: BUILD.bazel  CMakeLists.txt  compact16_acceptor-fst.cc  compact16_string-fst.cc  compact16_unweighted-fst.cc  compact16_unweighted_acceptor-fst.cc  compact16_weighted_string-fst.cc  compact64_acceptor-fst.cc  compact64_string-fst.cc  compact64_unweighted-fst.cc  compact64_unweighted_acceptor-fst.cc  compact64_weighted_string-fst.cc  compact8_acceptor-fst.cc  compact8_string-fst.cc  compact8_unweighted-fst.cc  compact8_unweighted_acceptor-fst.cc  compact8_weighted_string-fst.cc
openfst/extensions/compress/: BUILD.bazel  CMakeLists.txt  compress.h  compress_test.cc  compressscript.cc  compressscript.h  elias.h  fstcompress-main.cc  fstcompress.cc  fstquantize.cc  fstrandmod.cc  quantize_weights.cc  quantize_weights.h  quantize_weights_test.cc  randmod.h  randmod_test.cc
openfst/extensions/const/: BUILD.bazel  CMakeLists.txt  const16-fst.cc  const64-fst.cc  const8-fst.cc
openfst/extensions/far/: BUILD.bazel  CMakeLists.txt  compile-strings.cc  compile-strings.h  convert.h  create.h  encode.h  equal.h  extract.h  far-class.cc  far-class.h  far.cc  far.h  far_test.cc  farcompilestrings-main.cc  farcompilestrings.cc  farconvert-main.cc  farconvert.cc  farcreate-main.cc  farcreate.cc  farencode-main.cc  farencode.cc  farequal-main.cc  farequal.cc  farextract-main.cc  farextract.cc  farinfo-main.cc  farinfo.cc  farisomorphic-main.cc  farisomorphic.cc  farlib.h  farprintstrings-main.cc  farprintstrings.cc  farscript.cc  farscript.h  getters.cc  getters.h  info.h  isomorphic.h  map-reduce.h  (+7 more)
openfst/extensions/linear/: BUILD.bazel  CMakeLists.txt  fstlinear-main.cc  fstlinear.cc  fstloglinearapply-main.cc  fstloglinearapply.cc  linear-classifier-fst.cc  linear-fst-data-builder.h  linear-fst-data.h  linear-fst-data_test.cc  linear-fst.h  linear-fst_test.cc  linear-tagger-fst.cc  linearscript.cc  linearscript.h  loglinear-apply.h  trie.h  trie_test.cc
openfst/extensions/lookahead/: BUILD.bazel  CMakeLists.txt  arc_lookahead-fst.cc  ilabel_lookahead-fst.cc  olabel_lookahead-fst.cc
openfst/extensions/mpdt/: BUILD.bazel  CMakeLists.txt  compose.h  compose_test.cc  expand.h  expand_test.cc  info.h  mpdt.h  mpdt_test.cc  mpdtcompose-main.cc  mpdtcompose.cc  mpdtexpand-main.cc  mpdtexpand.cc  mpdtinfo-main.cc  mpdtinfo.cc  mpdtlib.h  mpdtreverse-main.cc  mpdtreverse.cc  mpdtscript.cc  mpdtscript.h  read_write_utils.h  reverse.h  reverse_test.cc
openfst/extensions/ngram/: BUILD.bazel  CMakeLists.txt  benchmark_test.cc  bitmap-index.cc  bitmap-index.h  bitmap-index_test.cc  compact-louds-tree-fst.h  compact-louds-tree-fst_test.cc  louds-lexicon.h  louds-lexicon_test.cc  louds-tree.h  louds-tree_test.cc  ngram-fst.cc  ngram-fst.h  ngram-fst_test.cc  nthbit.cc  nthbit.h  nthbit_test.cc
openfst/extensions/pdt/: BUILD.bazel  CMakeLists.txt  collection.h  collection_test.cc  compose.h  compose_test.cc  expand.h  expand_test.cc  getters.cc  getters.h  info.h  paren.h  paren_test.cc  pdt.h  pdtcompose-main.cc  pdtcompose.cc  pdtexpand-main.cc  pdtexpand.cc  pdtinfo-main.cc  pdtinfo.cc  pdtlib.h  pdtreplace-main.cc  pdtreplace.cc  pdtreverse-main.cc  pdtreverse.cc  pdtscript.cc  pdtscript.h  pdtshortestpath-main.cc  pdtshortestpath.cc  replace.h  replace_test.cc  reverse.h  reverse_test.cc  shortest-path.h  shortest-path_test.cc
openfst/extensions/python/: CMakeLists.txt  cios.pxd  cmemory.pxd  cpywrapfst.pxd  pywrapfst.pxd  pywrapfst.pyi  pywrapfst.pyx  pywrapfst_test.py
openfst/extensions/special/: BUILD.bazel  CMakeLists.txt  fstspecial.cc  phi-fst.cc  phi-fst.h  phi-fst_test.cc  rho-fst.cc  rho-fst.h  rho-fst_test.cc  sigma-fst.cc  sigma-fst.h  (+1 more)
openfst/lib/: BUILD.bazel  CMakeLists.txt  accumulator.h  add-on.h  arc-arena.h  arc-map.h  arc.h  arcfilter.h  arcsort.h  bi-table.h  build_rules.bzl  cache.h  cc-visitors.h  closure.h  compact-fst.h  compat-util.h  complement.h  compose-filter.h  compose.h  concat.h  connect.h  const-fst.h  determinize.h  dfs-visit.h  difference.h  disambiguate.h  edit-fst.h  encode.cc  encode.h  epsnormalize.h  equal.h  equivalent.h  error-weight.h  expanded-fst.h  expander-cache.h  expander-fst.h  expectation-weight.h  factor-weight.h  file-stream-status.h  file-util.h  (+80 more)
openfst/script/: BUILD.bazel  CMakeLists.txt  arc-class.h  arcfilter-impl.h  arciterator-class.cc  arciterator-class.h  arcsort.cc  arcsort.h  arg-packs.h  closure.cc  closure.h  compile-impl.h  compile.cc  compile.h  compose.cc  compose.h  concat.cc  concat.h  connect.cc  connect.h  convert.cc  convert.h  decode.cc  decode.h  determinize.cc  determinize.h  difference.cc  difference.h  disambiguate.cc  disambiguate.h  draw-impl.h  draw.cc  draw.h  encode.cc  encode.h  encodemapper-class.cc  encodemapper-class.h  epsnormalize.cc  epsnormalize.h  equal.cc  (+64 more)
openfst/test/: BUILD.bazel  CMakeLists.txt  a-star_test.cc  accumulator_test.cc  algo_test.cc  algo_test.h  arc-arena_test.cc  arc-map_test.cc  arcsort-main_test.sh  arcsort_test.cc  basic-fst.cc  basic-fst.h  cache_test.cc  cast_test.cc  closure-main_test.sh  closure_test.cc  compact_test.cc  compactors.h  compile-main_test.sh  compose-main_test.sh  compose_test.cc  compose_test.h  concat-main_test.sh  concat_test.cc  connect-main_test.sh  connect_test.cc  convert-main_test.sh  determinize-main_test.sh  determinize_test.cc  difference-main_test.sh  difference_test.cc  disambiguate-main_test.sh  disambiguate_test.cc  draw-main_test.sh  dso_test.sh  edit-fst_test.cc  encode-main_test.sh  encode_test.cc  epsnormalize-main_test.sh  epsnormalize_test.cc  (+90 more)
(+368 files in other folders)
