# Copyright 2025 The OpenFst Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "compat",
    srcs = ["compat.cc"],
    hdrs = ["compat.h"],
    deps = [":compat_memory"],
)

cc_library(
    name = "lock",
    hdrs = ["lock.h"],
)

cc_library(
    name = "flags_log",
    srcs = ["flags.cc"],
    hdrs = [
        "flags.h",
        "log.h",
    ],
    deps = [":lock"],
)

build_test(
    name = "flags_log_test",
    targets = [":flags_log"],
)

cc_library(
    name = "compat_memory",
    hdrs = ["compat_memory.h"],
)

cc_library(
    name = "file_path",
    srcs = ["file_path.cc"],
    hdrs = ["file_path.h"],
    deps = ["@com_google_absl//absl/strings"],
)
