# Copyright 2026 The OpenFst Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "compat",
    srcs = ["compat.cc"],
    hdrs = ["compat.h"],
    deps = [":compat_memory"],
)

cc_library(
    name = "compat_memory",
    hdrs = ["compat_memory.h"],
)

cc_test(
    name = "compat_memory_test",
    srcs = ["compat_memory_test.cc"],
    linkstatic = True,
    deps = [
        ":compat_memory",
        "//openfst/test:test_main",
        "@com_google_absl//absl/memory",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "file_path",
    srcs = ["file_path.cc"],
    hdrs = ["file_path.h"],
    deps = ["@com_google_absl//absl/strings"],
)

cc_test(
    name = "file_path_test",
    srcs = ["file_path_test.cc"],
    linkstatic = True,
    deps = [
        ":file_path",
        "//openfst/test:test_main",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "status_macros",
    hdrs = ["status_macros.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
    ],
)

cc_test(
    name = "status_macros_test",
    srcs = ["status_macros_test.cc"],
    linkstatic = True,
    deps = [
        ":status_macros",
        "//openfst/test:test_main",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:cord",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "init",
    srcs = ["init.cc"],
    hdrs = ["init.h"],
    deps = [
        "@com_google_absl//absl/base:nullability",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log:initialize",
        "@com_google_absl//absl/strings:string_view",
    ],
)

cc_test(
    name = "init_test",
    srcs = ["init_test.cc"],
    linkstatic = True,
    deps = [
        ":init",
        # Cannot be `test:test_main`, since that will call
        # `absl::SetProgramUsage` twice.
        "@com_google_googletest//:gtest_main",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:fixed_array",
        "@com_google_absl//absl/flags:flag",
    ],
)

cc_library(
    name = "unaligned",
    hdrs = ["unaligned.h"],
)

cc_test(
    name = "unaligned_test",
    srcs = ["unaligned_test.cc"],
    linkstatic = True,
    deps = [
        ":unaligned",
        "@com_google_googletest//:gtest_main",
    ],
)
